<resources>
    <string name="app_name">Ganado</string>
    <string name="usuario">Usuario</string>
    <string name="contrase">Contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="animales">Animales</string>
    <string name="title_activity_drawer_navig">DrawerNavig</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrador</string>
    <string name="nav_header_subtitle">GanadoSist@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_logt">Salir</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Ganado</string>
    <string name="menu_slideshow">Praderas</string>
    <string name="menu_tools">Produccion</string>
    <string name="menu_share">Nomina</string>
    <string name="menu_send">Administrar usuarios</string>
    <string name="menu_pass">Cambiar contraseña</string>

    <string name="user_name">Nombre: </string>
    <string name="user_email">Email: </string>
    <string name="user_tel">Telefono: </string>
    <string name="user_permis">Permisos: </string>
    <string name="user_status">Estado: </string>

    <string name="content_float">Agregar Nuevo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
