<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_animales"
        android:name="com.example.myapplication.ui.animales.animalesHomeFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_animales_home" />

    <fragment
        android:id="@+id/nav_praderas"
        android:name="com.example.myapplication.ui.praderas.PraderasFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_praderas" />

    <fragment
        android:id="@+id/nav_nomina"
        android:name="com.example.myapplication.ui.nomina.NominaFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_nomina" />

    <fragment
        android:id="@+id/nav_admuser"
        android:name="com.example.myapplication.ui.admuser.AdmUserFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_admuser" />

    <fragment
        android:id="@+id/nav_pass"
        android:name="com.example.myapplication.ui.chngpass.ChngPassFragment"
        android:label="@string/menu_pass"
        tools:layout="@layout/fragment_chngpass" />
</navigation>