<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp"
    tools:title="@string/action_perfil"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:layout_marginBottom="40dp"
        android:layout_gravity="center"
        android:src="@drawable/admin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Administrador"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:weightSum="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="..."
            android:layout_weight="1"/>
    </LinearLayout>


    <Button
        android:id="@+id/edit_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Editar Perfil"
        android:background="@color/primaryColor"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/secondaryTextColor"/>

</LinearLayout>