<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#DFDFDF">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="189dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/ganado" />

    <EditText
        android:id="@+id/editText_user"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:paddingLeft="2dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/user"
        android:hint="@string/usuario" />

    <EditText
        android:id="@+id/editText_pass"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/pass"
        android:hint="@string/contrase" />

    <Button
        android:id="@+id/button_open_home"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/secondaryLightColor"
        android:text="@string/ingresar"
        />

</LinearLayout>